# vajra

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml  spec.md  system-design.excalidraw
.github/workflows/: docs.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
docs/: configuration.md  deployment.md  development.md  index.md
docs/api/: collections.md  eval.md  ingest.md  query.md  workflows.md
docs/architecture/: components.md  deployment.md  overview.md
docs/assets/: excalidraw-light-mode.css  excalidraw-light-mode.js
docs/concepts/: adapters.md  data-contracts.md  governance.md
docs/diagrams/: data-model.excalidraw  eval-pipeline.excalidraw  ingest-pipeline.excalidraw  query-pipeline.excalidraw  system-architecture.excalidraw
docs/javascripts/: excalidraw-light-theme.js
docs/pipelines/: eval.md  ingest.md  query.md
frontend/: Dockerfile  components.json  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: app-sidebar.tsx  connection-status.tsx  workflow-status-badge.tsx
frontend/src/lib/: api-client.ts
scripts/: init-db.sql
src/vectorhouse/: config.py  main.py  worker.py
tests/: conftest.py
tests/activities/: test_dedup_check.py
tests/adapters/: test_lancedb_adapter.py
tests/api/: test_collections.py  test_health.py  test_ingest.py  test_query.py  test_upload_pdf.py
tests/services/: test_federation.py  test_file_extract.py
tests/workflows/: test_ingest_workflows.py
(+48 files in other folders)
