[project]
name = "vectorhouse"
version = "0.1.0"
description = "Data virtualization and governance platform for vector databases"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30",
    "alembic>=1.13,<2",
    "temporalio>=1.8,<2",
    "lancedb>=0.12,<1",
    "chromadb>=0.5,<1",
    "sentence-transformers>=3.0,<4",
    "httpx>=0.27",
    "numpy>=1.26,<3",
    "pdfplumber>=0.11,<1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.5",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-excalidraw>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vectorhouse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
